2008-09-11 Fix use of backticks in PS - MGD

2008-09-07 Changed full arrows slightly to avoid an xpdf rendering
           problem reported by Friedrich Hagedorn. - JKS

2008-08-25 Fix locale issues in SVG backend - MGD

2008-08-01 Backported memory leak fixes in _ttconv.cpp - MGD

2008-07-24 Deprecated (raise NotImplementedError) all the mlab2
           functions from matplotlib.mlab out of concern that some of
           them were not clean room implementations. JDH

2008-07-16 Improve error handling in texmanager, thanks to Ian Henry
           for reporting - DSD

2008-07-09 Improve mathtext radical rendering - MGD

2008-07-08 Improve mathtext superscript placement - MGD

2008-06-30 Removed Qt4 NavigationToolbar2.destroy -- it appears to
           have been unnecessary and caused a bug reported by P.
           Raybaut - DSD

2008-06-26 Fix mathtext bug for expressions like $x_{\leftarrow}$ - MGD

2008-06-26 Fix direction of horizontal/vertical hatches - MGD

===============================================================
2008-06-22 Released 0.91.4 at revision 5638

2008-06-09 Don't install Enthought.Traits along with matplotlib. For
           matplotlib developers convenience, it can still be
           installed by setting an option in setup.cfg while we figure
           decide if there is a future for the traited config - DSD

2008-06-02 Fix crash in Agg when drawing collections with no fill and/or
           edge color - MGD

2008-05-29 Released 0.91.3 at revision 5313

2008-05-29 matplotlib.image.imread now no longer always returns RGBA
           -- if the image is luminance or RGB, it will return a MxN
           or MxNx3 array if possible.  Also uint8 is no longer always
           forced to float.

2008-05-29 Implement path clipping in PS backend - JDH

2008-05-29 Fixed two bugs in texmanager.py:
               improved comparison of dvipng versions
               fixed a bug introduced when get_grey method was added
           - DSD
